--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,58 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.site__title {
+  color: white;
+  text-shadow: 0 2px 4px black;
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 72px;
+  text-align: center;
+  padding-top: 3.335em;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.darken {
+  color: #ccc;
+}
+
+.site__subtitle {
+  color: rgb(224, 115, 20);
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 0;
+  margin-top: 0;
+  font-family: "Helvetica Neue LT", "Hiragino Kaku Gothic Pro", "Helvetica", "Tahoma", "Arial", sans-serif;
+  font-weight: 500;
+  text-shadow: 0 2px 4px black;
+}
+
+.homepage_hero__container {
+  padding-top:0;
+  margin-top: 0 !important;
+  height: 500px;
+  max-height: 500px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
