Seperated concerns by creating HomepageHero component for the Hero portion of the homepage.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,11 @@ html, body {
   margin-bottom: 0;
 }
 
+.navbar {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+}
+
 .darken {
   color: #ccc;
 }
