--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -16,7 +16,7 @@
   text-transform: uppercase;
   font-size: 72px;
   text-align: center;
-  padding-top: 3.335em;
+  padding-top: 10.15rem;
   padding-bottom: 0;
   margin-bottom: 0;
   letter-spacing: -.333rem;
@@ -27,8 +27,8 @@
 }
 
 .site__subtitle {
-  color: fuchsia;
-  font-size: 33px;
+  color: white;
+  font-size: 40px;
   line-height: 1.2;
   text-transform: uppercase;
   text-align: center;
@@ -37,7 +37,23 @@
   font-family: "Raleway", "Helvetica Neue LT", "Hiragino Kaku Gothic Pro", "Helvetica", "Tahoma", "Arial", sans-serif;
   font-weight: 600;
   text-shadow: 0 2px 4px black;
-  letter-spacing: .2965rem;
+  letter-spacing: .444rem;
+}
+
+.sub_heading {
+  font-size: 32px;
+  font-family: "Raleway", "Helvetica Neue LT", "Hiragino Kaku Gothic Pro", "Helvetica", "Tahoma", "Arial", sans-serif;
+  font-weight: 600;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.orange_text {
+  color: #ff6500 !important;
+}
+
+.lead {
+  font-size: 1.555rem !important;
 }
 
 .navbar {
@@ -65,7 +81,7 @@
   margin-right: 25%;
 }
 
-.homepage_hero__container {
+.logo_mark__container {
   padding-top:0;
   margin-top: 0 !important;
   height: 500px;
